Replace grunt with Makefile & upgrade manifest version
Has been a while since I ran this, and a lot of the node plugins used
were outdated, and many of them had security issues. Instead of fixing
all that dependency tree, opted out for the much simpler approach of
having a Makefile. Grut was an overkill anyway, and most of the stuff
weren't really necessary (e.g. ugligying and minifying js, since they
are only a few lines anyway).

Upgraded `manifest_version` to 3.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Power Close",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A browser extension, for the tab addict, to close all tabs with urls containing a keyword or a domain name.",
   "icons": {
     "16": "icons/16.png",
@@ -18,7 +18,9 @@
   },
   "author": "Mosab Ibrahim",
   "background": {
-    "scripts": ["background.js"]
+    "scripts": [
+      "background.js"
+    ]
   },
   "homepage_url": "https://github.com/mos3abof/firefox-power-close",
   "permissions": [
